# ingoose-master

./: README.md
igoose-master/: README.md  pyproject.toml  setup.py
igoose-master/examples/vocoder/: README.md
igoose-master/examples/vocoder/conf/sr_22050_nfft_512_hop_128_mels_80_cnn1d/: train.yaml
igoose-master/examples/voice_conversion/: README.md  precompute_features.py  train.py
igoose-master/examples/voice_conversion/doc/: vc_22050.drawio  vc_22050.drawio.html
igoose-master/examples/voice_conversion/pretrained_checkpoints/: kmic_demo_2023q2_sr_22050_nfft_512_hop_128_decoder.ckpt
igoose-master/src/igoose/: data_map.py  data_modules.py
igoose-master/src/igoose/dataset_wrappers/: miscs.py
igoose-master/src/igoose/datasets/: audios.py  bases.py
igoose-master/src/igoose/ios/: audio_ios.py  task_ios.py
igoose-master/src/igoose/losses/: functional.py  regression.py  signal_losses.py
igoose-master/src/igoose/metrics/: regression.py
igoose-master/src/igoose/nn/: activations.py  discriminators.py  pqmf.py  resamplings.py  vector_quantizers.py
igoose-master/src/igoose/ops/: array_ops_np.py  grad_ops.py  signal_ops.py  signal_ops_np.py
igoose-master/src/igoose/tasks/: bases.py  codecs.py  frozen_backbones.py  gan_bases.py  utils.py  voice_converters.py
igoose-master/src/igoose/tasks/backbones/: f0_estimators.py  (+3 more)
igoose-master/src/igoose/trainer_plugins/: precisions.py
igoose-master/src/igoose/transforms/: misc_transforms.py  signal_transforms.py  signal_transforms_np.py
igoose-master/src/igoose/utilities/: module_tools.py  my_itertools.py
(+26 files in other folders)
